@@ -1,0 +1,5 @@
+2015-10-28  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Add config.rpath, m4/ChangeLog.
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.6.
+
